# surql-py

./: .env.template  .gitignore  .markdownlint.json  CHANGES  CONTRIBUTING.md  Dockerfile  LICENSE  LLM.txt  NOTICE  README.md  mkdocs.yml  pyproject.toml  reverie.ps1  surql.ps1  test_connection_validation.py
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  dep-review.yml  dependabot-auto-merge.yml  docs.yml  integration.yml  nightly.yml  pr-title.yml  publish.yml
docs/: VISUALIZATION_RENDERING_GUIDE.md  caching.md  changelog.md  cli.md  index.md  installation.md  migration.md  migrations.md  orchestration.md  queries.md  query-ux.md  query_hints.md  quickstart.md  schema.md  streaming.md  v3-patterns.md  versioning_rollback.md  visualization.md
docs/api/: README.md  index.md
docs/examples/: README.md  advanced_queries.py  basic_usage.py  generate_samples.py  graph_queries.py  hnsw_vector_search.py  index.md  migration_example.py  mtree_vector_search.py  orchestration_example.py  query_hints_example.py  schema_dark_mermaid.md  schema_definition.py  schema_forest_ascii.txt  schema_modern_graphviz.dot  versioning_rollback_example.py  visualization_example.py
docs/examples/output/: schema_dark_graphviz.dot  schema_modern_mermaid.md
src/: __init__.py  __main__.py  settings.py
src/cli/: __init__.py  common.py  db.py  migrate.py  schema.py
src/connection/: __init__.py  client.py  context.py  transaction.py
src/migration/: __init__.py  diff.py  discovery.py  executor.py  generator.py  history.py  models.py
src/query/: __init__.py  builder.py  crud.py  executor.py  expressions.py  graph.py  results.py
src/reverie/: __init__.py  __main__.py  settings.py
src/reverie/cache/: __init__.py  backends.py  config.py  decorator.py  manager.py
src/reverie/cli/: __init__.py  common.py  db.py  migrate.py  migrate_advanced.py  migrate_core.py  migrate_squash.py  orchestrate.py  schema.py  schema_diff.py  schema_inspect.py  schema_validate.py  schema_visualize.py  schema_watch.py
src/reverie/connection/: __init__.py  auth.py  client.py  config.py  context.py  registry.py  streaming.py  transaction.py
src/reverie/migration/: __init__.py  diff.py  discovery.py  executor.py  generator.py  history.py  hooks.py  models.py  rollback.py  squash.py  versioning.py  watcher.py
src/reverie/orchestration/: __init__.py  config.py  coordinator.py  health.py  strategy.py
src/reverie/query/: __init__.py  batch.py  builder.py  crud.py  executor.py  expressions.py  graph.py  graph_query.py  helpers.py  hints.py  typed.py
src/reverie/schema/: __init__.py  access.py  edge.py  fields.py  parser.py  registry.py  sql.py  table.py  themes.py  utils.py  validator.py  validator_utils.py  visualize.py
src/reverie/types/: __init__.py  coerce.py  operators.py  record_id.py  reserved.py
src/schema/: __init__.py  edge.py  fields.py  table.py
src/surql/: __init__.py  __main__.py  settings.py
src/surql/cache/: __init__.py  backends.py  config.py  decorator.py  manager.py
src/surql/cli/: __init__.py  (+13 more)
src/types/: __init__.py  operators.py  record_id.py
tests/: conftest.py  test_access.py  test_auth.py  test_batch.py  test_cache.py  test_cli.py  test_coerce.py  test_connection.py  test_connection_context.py  test_crud.py  test_diff_round_trip.py  test_edge_diff.py  test_edge_parser.py  test_embedded_live_poll.py  test_features_1_4.py  test_hnsw_diff.py  test_migration.py  test_migration_executor.py  test_migration_generator.py  test_migration_history.py  test_migration_rollback.py  test_migration_squash.py  test_migration_versioning.py  test_migration_watcher.py  test_mtree_diff.py  test_orchestration_cli.py  test_orchestration_config.py  test_orchestration_coordinator.py  test_orchestration_strategy.py  test_query.py  test_query_executor.py  test_query_expressions.py  test_query_graph.py  test_query_hints.py  test_query_ux_aggregation.py  test_query_ux_extraction.py  test_query_ux_functions.py  test_query_ux_type_record.py  test_registry.py  test_reserved_words.py  (+12 more)
tests/integration/: conftest.py  test_query_ux.py  test_v3_happy_path.py
(+54 files in other folders)
