[project]
name = "reverie"

version = "0.7.0"
description = "Code-first schema, validation, generation, and serialization for Python and SurrealDB."
authors = [
  { name = "Shon Thomas", email = "shon@oneiriq.com" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = [
  "cachetools>=5.0.0",
  "fastapi>=0.128.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.0",
  "python-dateutil>=2.9.0.post0",
  "python-ulid>=3.1.0,<4.0.0",
  "structlog>=25.5.0,<26",
  "surrealdb>=1.0.8,<2.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "typer>=0.21.1,<1.0.0",
  "watchdog>=4.0.0",
]

[project.optional-dependencies]
cache = ["redis>=5.0.0"]


[project.scripts]
reverie = "reverie.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reverie"]

[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 2

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",   # line too long
  "UP017",  # datetime.UTC alias - mypy strict rejects it
  "UP047",  # PEP 695 type params - ParamSpec/TypeVar still valid
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["reverie"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
markers = [
  "anyio: mark test as async",
]
filterwarnings = [
  "ignore:Remove `format_exc_info` from your processor chain:UserWarning:structlog",
]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = [
  "scripts/"
]

[[tool.mypy.overrides]]
module = ["docs.*"]
disable_error_code = ["call-arg"] # Allow default args in test functions

[tool.pylint.format]
max-line-length = 100
indent-string = '  '  # 2 spaces

[tool.pylint.messages_control]
disable = [
  'C0103',  # invalid-name (ruff handles this)
  'C0114',  # missing-module-docstring (ruff handles this)
  'C0115',  # missing-class-docstring (ruff handles this)
  'C0116',  # missing-function-docstring (ruff handles this)
  'R0903',  # too-few-public-methods (too opinionated)
  'W0212',  # protected-access (sometimes necessary)
  'C0330',  # bad-continuation (conflicts with black/ruff)
  'C0326',  # bad-whitespace (conflicts with black/ruff)
]

[tool.pylint.basic]
good-names = ['i', 'j', 'k', 'ex', 'id', 'db', '_']

[dependency-groups]
dev = [
  "anyio[trio]>=4.0.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-watch>=4.2.0",
  "ruff>=0.14.13",
  "pympler>=1.1,<2.0.0",
  "types-cachetools>=5.0.0",
  "types-python-dateutil>=2.9.0.20251115",
]